--- a/In.GovernanceRating.Service/Properties/launchSettings.json
+++ b/In.GovernanceRating.Service/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:58435",
-      "sslPort": 44313
+      "applicationUrl": "http://localhost:58654",
+      "sslPort": 44363
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "in.governanceRating": {
+    "In.GovernanceRating.Service": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
