--- a/In.GovernanceRating.Repository/In.GovernanceRating.Repository.csproj
+++ b/In.GovernanceRating.Repository/In.GovernanceRating.Repository.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\In.GovernanceRating.Entities\In.GovernanceRating.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
